--- a/style/helpers/tokens.styl
+++ b/style/helpers/tokens.styl
@@ -11,11 +11,15 @@ breakpoint-desktop = 1024px
 breakpoint-desktop-XL = 1440px
 // Colors - Brand
 color-brand-black = #333333
-color-brand-red = #dc1f26
+color-brand-red = #882f2b
 color-brand-slate = #454f62
 color-brand-gold = #cca677
 color-brand-blue = #398cd7
 color-brand-blue-light = lighten(color-brand-blue, 42%)
+color-brand-green = #224917
+color-brand-yellow = #f3a246
+color-brand-green-light = #cad54e
+color-brand-blue-light-2 = #6fcecf
 // Colors - Neutrals
 color-black = #32313d
 color-gray-dark = #4c4e56
@@ -64,6 +68,7 @@ font-size-4XL = (font-size-base * 2.5) // 40px
 font-size-5XL = (font-size-base * 3) // 48px
 font-size-6XL = (font-size-base * 3.5) // 56px
 // Font Weights
+font-weight-lgt = 300
 font-weight-reg = 400
 font-weight-med = 500
 font-weight-bld = 700
@@ -88,6 +93,8 @@ sizing-3XL = (sizing-base * 2.5) // 40px
 sizing-4XL = (sizing-base * 3) // 48px
 sizing-5XL = (sizing-base * 3.5) // 56px
 sizing-6XL = (sizing-base * 4) // 64px
+sizing-7XL = (sizing-base * 5) // 80px
+sizing-8XL = (sizing-base * 6) // 96px
 // Text Color
 text-color-default = color-gray-dark
 text-color-disabled = color-gray
