--- a/style/components/footer.styl
+++ b/style/components/footer.styl
@@ -1,2 +1,33 @@
+@require "../helpers/mixins.styl"
+
 footer
-    width: auto
+    background-image: url("/static/img/background-green.jpg")
+    padding: 1rem 0
+    text-align: center
+
+    &__contenido
+        font-size: 0
+        margin: 1rem auto
+        max-width: 1000px
+
+    &__columna
+        display: inline-block
+        margin: 0 auto
+        text-align: left
+        vertical-align: top
+        width: 33%
+
+    &__texto
+        color: white
+        font-size: 1rem
+        font-weight: 300
+        margin: 0.5rem 0
+        text-transform: uppercase
+
+    &__title"
+        color: white
+        font-size: 1.5rem
+        font-weight: 400
+        margin-bottom: 1rem
+        text-align: left
+        text-transform: uppercase
