--- a/style/components/footer.styl
+++ b/style/components/footer.styl
@@ -24,7 +24,7 @@ footer
         margin: 0.5rem 0
         text-transform: uppercase
 
-    &__title"
+    &__title
         color: white
         font-size: 1.5rem
         font-weight: 400
