--- a/style/components/footer.styl
+++ b/style/components/footer.styl
@@ -5,10 +5,15 @@ footer
     padding: 1rem 0
     text-align: center
 
+.footer
     &__contenido
+        display: flex
         font-size: 0
         margin: 1rem auto
+        margin: 0 auto
         max-width: 1000px
+        padding: 30px 0
+        width: 80%
 
     &__columna
         display: inline-block
@@ -17,11 +22,19 @@ footer
         vertical-align: top
         width: 33%
 
+        &--flex
+            align-items: center
+            display: flex
+            flex-direction: row
+            flex-wrap: wrap
+            justify-content: center
+
     &__texto
         color: white
         font-size: 1rem
         font-weight: 300
         margin: 0.5rem 0
+        text-align: center
         text-transform: uppercase
 
     &__title
@@ -29,5 +42,8 @@ footer
         font-size: 1.5rem
         font-weight: 400
         margin-bottom: 1rem
-        text-align: left
+        text-align: center
         text-transform: uppercase
+
+        &--w-100
+            width: 100%
