--- a/style/components/footer.styl
+++ b/style/components/footer.styl
@@ -15,12 +15,21 @@ footer
         padding: 30px 0
         width: 80%
 
+        +below(768px)
+            flex-direction: column
+
     &__columna
         display: inline-block
         margin: 0 auto
         text-align: left
         vertical-align: top
         width: 33%
+
+        +below(768px)
+            display: flex
+            flex-direction: column
+            margin: 30px 0
+            width: 100%
 
         &--flex
             align-items: center
