--- a/style/index.styl
+++ b/style/index.styl
@@ -102,6 +102,12 @@ h2
             margin-top: 2rem
             transform: translateY(0)
 
+        +below(768px)
+            align-items: center
+            display: flex
+            flex-direction: column
+            margin-top: 2rem !important
+
     &__imagen
         display: inline-block
         vertical-align: middle
@@ -109,6 +115,14 @@ h2
 
         &:hover
             transform: scale(1.3)
+
+        +below(768px)
+            margin: 10px 0 20px
+            order: 2
+            transform: scale(1.3)
+
+            &:hover
+                transform: scale(1.3)
 
     &__titulo
         display: inline-block
@@ -119,13 +133,25 @@ h2
         vertical-align: middle
         width: 33%
 
+        +below(768px)
+            order: 1
+            width: 100%
+
         &--derecha
             margin-right: 33%
             text-align: left
 
+            +below(768px)
+                margin: 0
+                text-align: center
+
         &--izquierda
             margin-left: 33%
             text-align: right
+
+            +below(768px)
+                margin: 0
+                text-align: center
 
         &--entradas
             color: color-brand-blue-light-2
@@ -148,11 +174,20 @@ h2
         margin: 3rem auto
         max-width: 1000px
 
+        +below(768px)
+            align-items: center
+            display: flex
+            flex-direction: column
+
     &__columna
         display: inline-block
         padding: 0 1rem
         vertical-align: top
         width: 50%
+
+        +below(768px)
+            margin: 25px
+            width: 100%
 
     &__campo
         font-size: 1rem
