--- a/style/components/popup.styl
+++ b/style/components/popup.styl
@@ -20,6 +20,10 @@
         top: 50%
         transform: translateY(-50%)
 
+        +below(768px)
+            &--1
+                width: 95vw !important
+
     &__entradas
         background-color: #6fcecf
 
@@ -58,8 +62,16 @@
             font-size: 2rem
             margin-right: -10px
 
+        +below(768px)
+            margin: 0 1rem
+
     &__encabezado
         margin-top: 1rem
+
+        +below(768px)
+            display: flex
+            justify-content: space-between
+            width: 100%
 
     &__precios
         color: black
@@ -115,6 +127,13 @@
             font-size: 2rem
             margin-right: -10px
 
+        +below(768px)
+            display: flex
+            justify-content: space-between
+
+    +below(768px)
+        padding: 2rem 1rem
+
 .subtitulos
     display: inline-block
     font-size: 1rem
@@ -141,6 +160,9 @@
         vertical-align: top
         width: 60%
 
+        +below(768px)
+            width: 55%
+
     &__precio
         text-align: center
         width: 20%
@@ -155,6 +177,9 @@
     margin: 0 0.5rem
     transform: scale(2) translateY(0.1rem)
 
+    +below(768px)
+        margin: 0 0.2rem
+
 .fuertes
     display: flex
     justify-content: space-between
@@ -162,6 +187,10 @@
     overflow: auto
     padding: 0 2rem 2rem
     width: 100%
+
+    +below(768px)
+        flex-direction: column
+        padding: 0 1rem 2rem
 
     &__titulo-1
         background-color: #f3a246
@@ -176,6 +205,9 @@
 
     &__columna
         width: 48%
+
+        +below(768px)
+            width: 100%
 
     &__titulo
         color: #f3a246
@@ -192,6 +224,9 @@
     &__flotante-contenido
         max-width: 1000px
         width: 1000px
+
+        +below(768px)
+            width: 95vw
 
 .postres
     padding: 2rem
@@ -221,6 +256,15 @@
     &__flotante-contenido
         max-width: 850px
         width: 850px
+
+        +below(768px)
+            height: 95vh
+            overflow: auto
+
+    +below(768px)
+        flex-direction: column
+        overflow: auto
+        padding: 0 1rem 2rem
 
 .show
     display: block
